# python-cookiecutter

.github/workflows/: test.yml
{{cookiecutter.project_slug}}/: .gitignore  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: CI.yml  cookiecutter.yml  draft_release.yml  release.yml  test.yml
